# transcribe-ai

./: Makefile  audio-transcription-0.json  audio-transcription-1.json  audio-transcription-2.json  diarization-output.json  notes_ia.ipynb  pyproject.toml  requirements.txt
transcribe-ai/: diarization.py  pipeline.py  response.json  transcribe-ai.py
transcribe-ai/core/: audio_service.py  diarization.py  diarization_segment.py  pipeline.py  transcribe.py  transcription.py
transcribe-ai/http/: api.py
